test/tests/compiler/16_characters_and_strings/invalid_types/extra_credit/switch_on_string.plx
#  can't use string literal as controlling expression in switch statement
pub fn main(none) i32 {
    match "foo" {
        otherwise {
            return 0
        }
    }
}
